# band3_recomp

./: .gitignore  CMakeLists.txt  CMakePresets.json  band3_config.ini  band3_config.toml  band3_manifest.toml
src/: band3_app.h  config.cpp  config.h  hook_helpers.h  main.cpp  patches.cpp
src/Game/: BinStream.cpp  DTAFunctions.cpp  DataArray.h  DataNode.cpp  DataNode.h  Symbol.cpp  Symbol.h
src/Hooks/: camera_shake.cpp  crypto.cpp  file.cpp  graphics.cpp  math.cpp  memory.cpp  profile.cpp
